<resources>
    <string name="app_name">PassGuard</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_password">Add Password</string>
    <string name="website">Website</string>
    <string name="add_extra_info">Add Extra Info</string>
    <string name="label">Label</string>
    <string name="value">Value</string>
    <string name="hidden">Hidden</string>
    <string name="confidential">Confidential</string>
    <string name="visibility">Visibility</string>
    <string name="extras">Extras</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_password">Delete password</string>
    <string name="delete_confirmation_message">This is non-reversible. Are you sure you want to delete this password?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="website_name">Website name</string>
    <string name="fp_not_available">Fingerprint feature not available!</string>
    <string name="fp_not_supported">Fingerprint not supported by this device!</string>
    <string name="something_went_wrong">Something went wrong while authenticating fingerprint!</string>
    <string name="fp_prompt_message">Scan your fingerprint to enter the app.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_string">Import</string>
    <string name="export">Export</string>
    <string name="delete_all">Delete All</string>
    <string name="backup_key">Encryption Password</string>
    <string name="copied">Copied!</string>
    <string name="imported">Imported!</string>
    <string name="enter_complete_key">Enter complete key!</string>
    <string name="unable_to_import">Unable to import passwords!</string>
    <string name="no_passwords_to_export">No passwords to export!</string>
    <string name="enter_device_credentials">Enter your device credentials</string>
    <string name="edit_password">Edit Password</string>
    <string name="import_passwords">Import Passwords</string>
    <string name="decryption_dialog_message">Enter the 8 character secret key that you used to export the passwords. Make sure you have it right otherwise the passwords won\'t be imported!</string>
    <string name="secret_key">Secret Key</string>
    <string name="encryption_dialog_message">Keep this key safe with you. You will need it while importing these passwords later on.</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="enter_secret_key">Enter Secret Key</string>
    <string name="close">close</string>
    <string name="warning">Warning</string>
    <string name="delete_warning_message">After you perform this operation, all of your passwords will be permanently deleted. If you want to restore the password, first export it and then delete it. Then you can import it again.</string>
    <string name="delete_confirmation_checkbox">I truly want to clear out my password list</string>
    <string name="no_passwords">No Passwords</string>
    <string name="no_passwords_message">Hey! Looks like you haven\'t added any passwords yet. Click on the + icon below to start adding.</string>
    <string name="search">Search</string>
</resources>