<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:src="@drawable/baseline_warning_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/warning"
        android:textColor="@color/colorOnSurface"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/delete_warning_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/delete_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/color_red"
        app:rippleColor="@color/colorPrimaryTransparent"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel"
        android:textColor="@color/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/password_checkbox"
        app:rippleColor="@color/colorPrimaryTransparent" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:text="1"
        android:visibility="gone"
        tools:visibility="gone"
        android:textColor="@color/colorSurface"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/delete_countdown_timer_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/delete_button"
        app:layout_constraintEnd_toEndOf="@+id/delete_button"
        app:layout_constraintStart_toStartOf="@+id/delete_button"
        app:layout_constraintTop_toTopOf="@+id/delete_button" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/password_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:drawablePadding="32dp"
        android:text="@string/delete_confirmation_checkbox"
        android:textColor="@color/color_red"
        android:textSize="14sp"
        app:buttonTint="@color/color_red"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>