<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_key_24"
        app:tint="@color/colorControlTint" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_key"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/decryption_dialog_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <com.ismail.creatvt.passguard.customviews.PinView
        android:id="@+id/pinView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:inputType="textShortMessage"
        android:cursorVisible="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:textColor="@color/colorControlTint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:itemCount="8"
        app:itemRadius="8dp"
        app:itemSpacing="0dp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:lineColor="@color/midGrey"
        app:lineWidth="1dp"
        app:viewType="rectangle">
        <requestFocus/>
    </com.ismail.creatvt.passguard.customviews.PinView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/importButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/import_passwords"
        app:icon="@drawable/baseline_download_24"
        app:cornerRadius="8dp"
        app:iconTint="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorControlTint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pinView"
        app:layout_constraintStart_toStartOf="@+id/pinView"
        app:layout_constraintTop_toBottomOf="@+id/pinView" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?selectableItemBackground"
        app:tint="@color/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24" />
</androidx.constraintlayout.widget.ConstraintLayout>