<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.ismail.creatvt.passguard.passwordlist.PasswordListViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:animateLayoutChanges="true"
        tools:context=".passwordlist.PasswordListActivity">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_password"
            android:focusable="true"
            android:onClick="onPasswordButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@color/colorOnPrimary" />

        <FrameLayout
            android:id="@+id/passwordsListContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/top_rounded_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/passwordsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="100dp"
                tools:listitem="@layout/password_list_item"
                tools:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorOnPrimary"
            android:textSize="20sp"
            android:visibility="@{viewModel.isSearchModeEnabled() ? View.GONE : View.VISIBLE}"
            tools:visibility="visible"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/passwordsListContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settingsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="12dp"
            android:visibility="@{viewModel.isSearchModeEnabled() ? View.GONE : View.VISIBLE}"
            tools:visibility="visible"
            android:src="@drawable/baseline_settings_24"
            app:layout_constraintBottom_toTopOf="@+id/passwordsListContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/noPasswordImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="90dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="200dp"
            app:srcCompat="@drawable/no_passwords_artwork" />

        <TextView
            android:id="@+id/noPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/no_passwords"
            android:textColor="@color/colorOnSurface"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/noPasswordImage"
            app:layout_constraintStart_toStartOf="@+id/noPasswordImage"
            app:layout_constraintTop_toBottomOf="@+id/noPasswordImage" />

        <TextView
            android:id="@+id/noPasswordMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/no_passwords_message"
            android:textAlignment="center"
            android:textColor="@color/colorOnSurfaceLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noPasswordTitle" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/noPasswordGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="noPasswordImage, noPasswordMessage, noPasswordTitle" />

        <EditText
            android:id="@+id/searchInputField"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:paddingStart="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/transparentGrey"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/cursor"
            android:hint="@string/search"
            android:text="@={viewModel.searchQuery}"
            android:paddingEnd="80dp"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:visibility="@{viewModel.isSearchModeEnabled() ? View.VISIBLE : View.GONE}"
            app:keyboardEnabled="@{viewModel.isSearchModeEnabled()}"
            tools:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/passwordsListContainer"
            app:layout_constraintEnd_toEndOf="@+id/searchOption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/searchOption"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="12dp"
            app:tint="@color/white"
            app:forwardAnimation="@{@drawable/search_to_close_animation}"
            app:backwardAnimation="@{@drawable/close_to_search_animation}"
            android:onClick="@{(v) -> viewModel.onSearchImageClick()}"
            app:srcCompat="@drawable/search_to_close_animation"
            app:layout_constraintBottom_toBottomOf="@+id/settingsButton"
            app:layout_constraintEnd_toStartOf="@+id/settingsButton"
            app:layout_constraintTop_toTopOf="@+id/settingsButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>